# Trajectory_Control

./: README.md
fetch_common/: CMakeLists.txt  package.xml
fetch_common/launch/: bringup.launch  bringup.launch~
fetch_common/worlds/: fetch.world
fetch_controller/fetch_controller_interface/: CMakeLists.txt  package.xml
fetch_controller/fetch_controller_mechanism/: CMakeLists.txt  package.xml
fetch_description/robots/: fetch.urdf
fetch_moveit/fetch_moveit_tasks/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fetch_moveit/fetch_moveit_tasks/launch/: moveit.launch  moveit.launch~
fetch_moveit/fetch_moveit_tasks/scripts/: disco.py~
fetch_moveit/fetch_moveit_tasks/src/: test_moveit.cpp
fetch_nav/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fetch_nav/src/: fetch_drive_base.cpp~  fetch_nav.cpp  fetch_nav.cpp~
fetch_tracik/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fetch_tracik/include/fetch_tracik/: fetch_tracik.h
fetch_tracik/src/: fetch_tracik.cpp  fetch_tracik_node.cpp
fetch_traj/: CMakeLists.txt  CMakeLists.txt~  package.xml
fetch_traj/include/fetch_traj/: fetch_traj.h
fetch_traj/src/: fetch_traj.cpp  fetch_traj.cpp~  fetch_traj_node.cpp  fetch_traj_node.cpp~
