<?xml version="1.0"?>
<package>
  <name>fetch_moveit_tasks</name>
  <version>0.0.0</version>
  <description>The fetch_moveit_tasks package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="harish@todo.todo">harish</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>   
  <build_depend>moveit_config_trac_ik</build_depend>   
  <build_depend>moveit_core</build_depend>   
  <build_depend>moveit_fake_controller_manager</build_depend>  
  <build_depend>moveit_msgs</build_depend>  
  <build_depend>moveit_planners_ompl</build_depend>  
  <build_depend>moveit_ros_benchmarks</build_depend>   
  <build_depend>moveit_ros_benchmarks_gui</build_depend>   
  <build_depend>moveit_ros_control_interface</build_depend>   
  <build_depend>moveit_ros_manipulation</build_depend>   
  <build_depend>moveit_ros_move_group</build_depend>   
  <build_depend>moveit_ros_perception</build_depend>   
  <build_depend>moveit_ros_planning</build_depend>   
  <build_depend>moveit_ros_planning_interface</build_depend> 
  <build_depend>moveit_ros_robot_interaction</build_depend>   
  <build_depend>moveit_ros_visualization</build_depend>   
  <build_depend>moveit_ros_warehouse</build_depend>   
  <build_depend>moveit_simple_controller_manager</build_depend>   
  <build_depend>trac_ik_examples</build_depend>   
  <build_depend>trac_ik_kinematics_plugin</build_depend>   
  <build_depend>trac_ik_lib</build_depend>   
  <build_depend>val_control</build_depend>   
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>moveit_commander</run_depend>   
  <run_depend>moveit_config_trac_ik</run_depend>   
  <run_depend>moveit_core</run_depend>   
  <run_depend>moveit_fake_controller_manager</run_depend>   
  <run_depend>moveit_msgs</run_depend>   
  <run_depend>moveit_planners_ompl</run_depend>   
  <run_depend>moveit_ros_benchmarks</run_depend>   
  <run_depend>moveit_ros_benchmarks_gui</run_depend>   
  <run_depend>moveit_ros_control_interface</run_depend>   
  <run_depend>moveit_ros_manipulation</run_depend>   
  <run_depend>moveit_ros_move_group</run_depend>   
  <run_depend>moveit_ros_perception</run_depend>   
  <run_depend>moveit_ros_planning</run_depend>   
  <run_depend>moveit_ros_planning_interface</run_depend>   
  <run_depend>moveit_ros_robot_interaction</run_depend>   
  <run_depend>moveit_ros_visualization</run_depend>   
  <run_depend>moveit_ros_warehouse</run_depend>   
  <run_depend>moveit_simple_controller_manager</run_depend>   
  <run_depend>trac_ik_examples</run_depend>   
  <run_depend>trac_ik_kinematics_plugin</run_depend>   
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
